packages/style/scss/cards.scss
/* ... */
.xxl-page .card {
  @media (min-width: $bp-xxxl) {
    min-width: $min-card-width-xxxl;
    max-width: $max-card-width;
  }
}

.card-deck {
  flex-flow: column nowrap;
}

.card-group-list .card,
.card-group-list .related-results,
.card-deck-3-cols .card,
.card-deck-4-cols .card {
  flex: 0 0 100%;
}

.card-group-list {
  @media (max-width: ($bp-xxxl - 1px)) {
    margin-left: 0 !important;
    margin-right: 0 !important;
    flex-flow: column wrap;
  }

  &.card-columns {
    column-count: 1;
    column-gap: 3.2rem;

    @media (min-width: $bp-xxxl) {
      column-count: 2;
    }

    @media (min-width: $bp-4k) {
      column-gap: 4rem;
    }
  }

  .card {
    @media (min-width: $bp-xxxl) {
      max-width: none;
    }
  }

  .card,
  .related-results,
  .header-card,
  .related-galleries-card,
  .related-collections-card {
    @media (max-width: ($bp-xxxl - 1px)) {
      margin-left: 0;
      margin-right: 0;
    }

    @media (min-width: $bp-xxxl) {
      flex: 0 0 calc(100% / 2 - #{$grid-gutter * 2});
    }
  }

  .content-card.card {
    @media (min-width: $bp-4k) {
      margin-bottom: 1.875rem;
    }
  }

  .related-results {
    padding-left: 1rem;

    @media (min-width: $bp-xxxl) {
      margin-left: $grid-gutter;
    }
  }

  .related-galleries-card,
  .related-collections-card {
    margin-left: 0;
    margin-right: 0;
  }

  .related-collections-card {
    margin-bottom: 2.25rem;
  }
}

@media (min-width: $bp-medium) {
  .card-deck {
    flex-flow: row wrap;
  }

  .card-deck-4-cols.narrow-gutter {
    margin-left: -$grid-gutter-narrow;
    margin-right: -$grid-gutter-narrow;
  }

  .card-deck-3-cols .card {
    flex: 0 0 calc(100% / 3 - #{$grid-gutter * 2});
  }

  .card-deck-4-cols .card {
    flex: 0 0 calc(100% / 2 - #{$grid-gutter * 2});
  }

  .card-deck-4-cols.narrow-gutter .card {
    flex: 0 0 calc(100% / 2 - #{$grid-gutter-narrow * 2});
  }
}

@media (min-width: $bp-large) {
  .card-deck-4-cols .card {
    flex: 0 0 calc(100% / 4 - #{$grid-gutter * 2});
  }

  .card-deck-4-cols.narrow-gutter .card {
    flex: 0 0 calc(100% / 4 - #{$grid-gutter-narrow * 2});
  }
}

.card-deck-4-cols .card {
  @at-root .xxl-page & {
    @media (min-width: $bp-xxxl) {
      flex: 0 0 calc(100% / 4 - #{$grid-gutter * 2});
    }

    @media (min-width: ($bp-wqhd)) {
      flex: 0 0 calc(100% / 6 - #{$grid-gutter * 2});
    }

    @media (min-width: ($bp-4k)) {
      flex: 0 0 calc(100% / 6 - #{$grid-gutter-4k * 2});
      margin: 0 $grid-gutter-4k calc(2 * $grid-gutter-4k);
    }
  }
}

.card-group > .card:not(:last-child),
.card-group > .card:not(:first-child) {
  border-radius: $border-radius-small;
}

.card.card-group-card .card-body {
  padding-bottom: 0.5rem;
}

.browse-section {
  .content-card:not(.mini-card) a .card-body {
    min-height: 10rem;
  }
}

h2.card-group-title {
  color: $darkgrey;
  font-weight: 600;
  font-size: $font-size-medium;

  @media (min-width: $bp-small) {
    font-size: $font-size-large;
  }

  @media (min-width: $bp-4k) {
    font-size: $font-size-large-4k;
  }
}

